# csvreader

./: .gitignore  meson.build
include/csvreader/: conversion.hpp  csvreader.hpp  map_op.hpp  readcsv.h  vector_op.hpp
src/: test.cpp
testdata/: test.csv
